--- a/Draw/Controller/PrivateChat/ChatDetailController.xib
+++ b/Draw/Controller/PrivateChat/ChatDetailController.xib
@@ -170,7 +170,7 @@
 							<object class="IBUIButton" id="922341360">
 								<reference key="NSNextResponder" ref="1067621707"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{202, 2}, {56, 30}}</string>
+								<string key="NSFrame">{{203, 4}, {56, 30}}</string>
 								<reference key="NSSuperview" ref="1067621707"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="193685694"/>
@@ -179,7 +179,6 @@
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
-								<int key="IBUIButtonType">1</int>
 								<string key="IBUINormalTitle">发送</string>
 								<reference key="IBUIHighlightedTitleColor" ref="33122391"/>
 								<object class="NSColor" key="IBUINormalTitleColor">
@@ -193,7 +192,7 @@
 							<object class="IBUIButton" id="193685694">
 								<reference key="NSNextResponder" ref="1067621707"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{264, 2}, {54, 30}}</string>
+								<string key="NSFrame">{{262, 4}, {56, 30}}</string>
 								<reference key="NSSuperview" ref="1067621707"/>
 								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -201,7 +200,6 @@
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
-								<int key="IBUIButtonType">1</int>
 								<string key="IBUINormalTitle">涂鸦</string>
 								<reference key="IBUIHighlightedTitleColor" ref="33122391"/>
 								<object class="NSColor" key="IBUINormalTitleColor">
@@ -215,7 +213,7 @@
 							<object class="IBUITextView" id="888685865">
 								<reference key="NSNextResponder" ref="1067621707"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{5, 2}, {195, 31}}</string>
+								<string key="NSFrame">{{5, 3}, {195, 31}}</string>
 								<reference key="NSSuperview" ref="1067621707"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="922341360"/>
@@ -234,11 +232,11 @@
 								</object>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">1</int>
-									<double key="pointSize">12</double>
+									<double key="pointSize">13</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica</string>
-									<double key="NSSize">12</double>
+									<double key="NSSize">13</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
@@ -304,14 +302,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">inputView</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="1067621707"/>
-					</object>
-					<int key="connectionID">29</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">dataTableView</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="619305645"/>
@@ -325,6 +315,14 @@
 						<reference key="destination" ref="888685865"/>
 					</object>
 					<int key="connectionID">31</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">inputBackgroundView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="1067621707"/>
+					</object>
+					<int key="connectionID">33</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -482,7 +480,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">32</int>
+			<int key="maxID">33</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -502,8 +500,8 @@
 					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="graffitiButton">UIButton</string>
+						<string key="inputBackgroundView">UIView</string>
 						<string key="inputTextView">UITextView</string>
-						<string key="inputView">UIView</string>
 						<string key="sendButton">UIButton</string>
 						<string key="titleLabel">UILabel</string>
 					</dictionary>
@@ -512,13 +510,13 @@
 							<string key="name">graffitiButton</string>
 							<string key="candidateClassName">UIButton</string>
 						</object>
+						<object class="IBToOneOutletInfo" key="inputBackgroundView">
+							<string key="name">inputBackgroundView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="inputTextView">
 							<string key="name">inputTextView</string>
 							<string key="candidateClassName">UITextView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="inputView">
-							<string key="name">inputView</string>
-							<string key="candidateClassName">UIView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="sendButton">
 							<string key="name">sendButton</string>
